// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldLine /> should display invalid correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="field-group is-invalid"
    >
      <label
        class="text-right"
        for="unitInput"
      >
        unitInput
      </label>
      <div
        class="input-container"
      >
        mock
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<FieldLine /> should render without crashing 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="field-group"
    >
      <label
        class="text-right"
        for="unitInput"
      >
        unitInput
      </label>
      <div
        class="input-container"
      >
        mock
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<FieldLine /> should show a required marker 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="field-group"
    >
      <label
        class="text-right"
        for="unitInput"
      >
        unitInput
        <span
          class="field-required"
        >
           *
        </span>
      </label>
      <div
        class="input-container"
      >
        mock
      </div>
    </div>
  </form>
</DocumentFragment>
`;
